--- a/Loja/index.html
+++ b/Loja/index.html
@@ -27,7 +27,7 @@
     </div>
         
         <h1>Loja</h1>
-        <p class="p"> Bem vindo <span id="user"></span> vamo às compras!</p>
+        <p class="p"> Bem vindo <span id="user"></span> vamos às compras!</p>
         <br>
         <h2> PRODUTOS </h2>
         <br>
